--- a/IshiharaCompany/IshiharaCompany.csproj
+++ b/IshiharaCompany/IshiharaCompany.csproj
@@ -75,6 +75,7 @@
     <Compile Include="EmptySourceFile.cs" />
     <Compile Include="Patches\EnemyAIPatch.cs" />
     <Compile Include="Patches\MenuManagerPatch.cs" />
+    <Compile Include="Patches\LandminePatch.cs" />
     <Compile Include="Patches\TerminalAccessibleObjectPatch.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
